# temp

./: .gitignore  README.md  robots.txt  安装说明.html
ai-employee-backend/: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  test_debug.db  test_debug2.db  test_debug3.db  test_debug4.db  test_debug5.db
ai-employee-backend/alembic/: env.py
ai-employee-backend/alembic/versions/: fce9c606d775_initial_schema.py
ai-employee-backend/configs/: nginx.conf
ai-employee-backend/scripts/: dev.sh
ai-employee-backend/src/ai_employee/: __init__.py  config.py  dependencies.py  main.py
ai-employee-backend/src/ai_employee/api/: router.py
ai-employee-backend/src/ai_employee/core/: exceptions.py  permissions.py  quota.py  security.py
ai-employee-backend/src/ai_employee/db/: redis.py  session.py
ai-employee-backend/src/ai_employee/middleware/: __init__.py  auth.py  quota.py
ai-employee-backend/src/ai_employee/models/: __init__.py  audit_log.py  base.py  content.py  customer.py  map.py  publish.py  quota.py  rbac.py  tenant.py  trend.py  user.py
ai-employee-backend/src/ai_employee/schemas/: __init__.py  base.py  content.py  customer.py  map.py  publish.py  quota.py  rbac.py  tenant.py  trend.py  user.py
ai-employee-backend/src/ai_employee/services/: __init__.py  account_profile_service.py  rbac_service.py  (+20 more)
ai-employee-backend/tests/: conftest.py
ai-employee-backend/tests/test_api/: test_audit.py  test_auth.py  test_content.py  test_customer.py  test_map.py  test_publish.py  test_quotas.py  test_rbac.py  test_tenants.py  test_trends.py  test_users.py
ai-employee-backend/tests/test_services/: test_quota_service.py  test_rbac_service.py
(+368 files in other folders)
